Prodwork/atefwork/adib-ingress/ingress-adib-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: adib-api
 namespace: fsi
spec:
 ingressClassName: nginx-demo
 rules:
   - host: adib-api.demo5.proxym-it.tn
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: poc-adib-api-springboot
             port:
               number: 8080
